objects/Flosum__FlosumSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Hold Settings for Organization Metadata Type Behavior</description>
    <fields>
        <fullName>Flosum__Compare_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the metadata item is enabled for comparison or not.</description>
        <label>Compare Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Configuration_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tell whether record is a configuration setting or metadata item setting.</description>
        <label>Configuration Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Metadata_Type_Name__c</fullName>
        <description>Name of Metadata type.</description>
        <label>Metadata Type Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flosum__is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine if selected metadata item is enabled for retrieval or not.</description>
        <label>is Enabled (Retrieval)</label>
        <type>Checkbox</type>
    </fields>
    <label>Flosum Setting</label>
</CustomObject>